--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,27 +1,52 @@
-
-
-
 .logo {
-    background-color: aqua;
-    width: 65px;
-    height: 65px;
-    border-radius: 50%;
-    background-image: url("https://i.pinimg.com/1200x/af/1a/f7/af1af7fac1f539bf2722bd04a8816fdb.jpg");
-    background-size: 80px;
-    background-size: cover;
+  background-color: aqua;
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  background-image: url("https://i.pinimg.com/1200x/af/1a/f7/af1af7fac1f539bf2722bd04a8816fdb.jpg");
+  background-size: 80px;
+  background-size: cover;
 }
 
 #navbar {
-    align-items: center;
-    margin-left: auto;
-    margin-right: 20px;;
-    font-size: clamp(14px, 2vw, 20px);
+  align-items: center;
+  margin-left: auto;
+  margin-right: 20px;
+  font-size: clamp(14px, 2vw, 20px);
 }
 
 #header {
-    background: linear-gradient(to left, gray, rgb(71, 70, 70));
+  background: linear-gradient(to left, gray, rgb(71, 70, 70));
 }
 
 main {
-    font-size: clamp(14px, 2vw, 20px);
+  font-size: clamp(14px, 2vw, 20px);
+}
+
+#main {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+#upMain {
+  min-height: 300px;
+}
+
+#foto1 {
+  background-color: aqua;
+  width: 100px;
+  height: 100px;
+  background-image: url();
+}
+
+#profil {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#headingMiddle {
+    font-size: ;
 }
